<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CaptureActivity">

    <Button
        android:id="@+id/grid_laser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_laser_button_text"
        app:layout_constraintBottom_toTopOf="@+id/radial_laser_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="onRectClick"/>

    <Button
        android:id="@+id/radial_laser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radial_laser_button_text"
        app:layout_constraintBottom_toTopOf="@+id/linear_laser_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_laser_button"
        android:onClick="onCircleClick"/>

    <Button
        android:id="@+id/linear_laser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linear_laser_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radial_laser_button"
        android:onClick="onLineClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>